Update  md：springcloud

--- a/offer/面试.md
+++ b/offer/面试.md
@@ -1703,6 +1703,14 @@ PS：Eureka-》AP：
   - Eureka不在从注册列表中移除因为长时间没收到心跳而应该过期的服务
   - Eureka仍然能够接受新服务的注册和查询请求，但是不会被同步到其他节点上 (即保证当前节点依然可用)
   - 当网络稳定时，当前实例新的注册信息会被同步到其他节点中
+ 
+#### 18.执行流程
+1.请求同意通过api网关（zuul/gateway）来访问内部服务
+2.网关接收到请求后，从注册中心（eureka/consul/nacos）获取可用服务
+3.由ribbon进行负载均衡后，分发到后端具体实例
+4.微服务之间通过feign/dubbo进行通信处理业务
+5.hystrix/Sentinel 负责处理服务超时熔断
+6.skywalking/turbine监控服务间的调用和熔断相关指标，用于后续的监控与分析
 
 
 
